<resources>
    <string name="app_name">SamVaad</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="app_language">App Language</string>
    <string name="autoplay_videos">Autoplay Videos</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="otp_sent">OTP has been sent to the provided Phone Number.</string>
    <string name="account_not_create">This phone number is already registered. Please try different combination.</string>
    <string name="account_not_valid">This phone number is not valid.</string>
    <string name="enter_e_mail">Enter E-mail address</string>
    <string name="enter_valid_mail">Enter valid E-mail address</string>
    <string name="enter_phone_no">Enter phone number</string>
    <string name="enter_valid_phone">Enter a valid phone number</string>
    <string name="profile_update">Your profile updated successfully.</string>
    <string name="profile_not_updated">This profile is not yet updated.</string>
    <string name="disclaimerstr">Please Read disclaimer first</string>
    <string name="description">OTP has been sent to your provided mobile number. We will detect it automatically within 10 seconds or you can enter OTP manually here.</string>
    <string name="otp_text">Enter 6 digit OTP code you received</string>
    <string name="otp_msg">OTP is only active for 5 minutes</string>
    <string name="verify">VERIFY</string>
    <string name="try_otp"> Didn\'t receive OTP?  TRY</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verification_title">Verification</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="enter_valid_otp">Please enter a valid OTP.</string>
    <string name="registered">You are registered successfully.</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="notification">Notification</string>
    <string name="select_language">Select Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="done">Done</string>
    <string name="select_fav_language">Select your favourite language</string>
    <string name="title">Home</string>
    <string name="our_programs">OUR PROGRAMS</string>
    <string name="learn">Learn</string>
    <string name="course_description">Bridging the skills deficit gap among women, youth and farmers for creating sustainable livelihoods.</string>
    <string name="buffring">Buffering...</string>
    <string name="about_us">About Us</string>
    <string name="terms_of">Terms of use</string>
    <string name="online_msg">You are not online!!!!</string>
    <string name="logout">You are successfully logged out.</string>
    <string name="home">Home</string>
    <string name="Notification">Notification</string>
    <string name="Favorites">Favourite</string>
    <string name="Profile">Profile</string>
    <string name="Change_Language">Change Language</string>
    <string name="Change_Folder">Change Downloads Folder</string>
    <string name="Terms_of_use">Terms of use</string>
    <string name="About_Us">About Us</string>
    <string name="Downloads">Downloads</string>
    <string name="contents">Contents</string>
    <string name="Daksh">Daksh</string>
    <string name="downloading_cancel">DownloadFile cancel!</string>
    <string name="chapters">CHAPTERS</string>
    <string name="topic">TOPICS</string>
    <string name="select_location">Select Location</string>
    <string name="default_folder">Default Folder</string>
    <string name="select_folder">SELECT FOLDER</string>
    <string name="Chapters">Chapters</string>
    <string name="Topic">Topic</string>
    <string name="no_record">No Record Found</string>
    <string name="read">Read</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="download_update">Download update</string>
    <string name="update">Updated</string>
    <string name="favourite">Favourite</string>
    <string name="Take_Offline">Take Offline</string>
    <string name="import_data">Importing data</string>
    <string name="import_data_from">Importing data from</string>
    <string name="Quiz">Quiz</string>
    <string name="Start_Quiz_Now">Start Quiz Now</string>
    <string name="Close">CLOSE</string>
    <string name="QUIT">QUIT</string>
    <string name="SKIP">SKIP</string>
    <string name="Multiple_choice">Multiple choice type question</string>
    <string name="Question">Question</string>
    <string name="Listen">LISTEN</string>
    <string name="Select_any">Select any 1 answer from following options</string>
    <string name="View">View</string>
    <string name="Submit">Submit</string>
    <string name="Your_Score">Your Score!!</string>
    <string name="OUT">OUT</string>
    <string name="OF">OF</string>
    <string name="RESTART">RESTART</string>
    <string name="Run_Simulator">Try it yourself</string>
    <string name="Simulator">Try it yourself</string>
    <string name="EXIT">EXIT</string>
    <string name="Description">Description-</string>
    <string name="This_is_correct">This is correct</string>
    <string name="Correct_Answer">Correct Answer-</string>
    <string name="simulator_s"> Try it yourself</string>
    <string name="Next">Next</string>
    <string name="Pause">PAUSE</string>
    <string name="Buffering">BUFFERING</string>
    <string name="quiz_quit_are">Are you sure you want to quit?</string>
    <string name="quiz_quit_progress">your progress won\'t be saved!!</string>
    <string name="description_available">Description Not Available</string>
    <string name="update_text">Update Now</string>
    <string name="remind_me_later">Remind me Later</string>
    <string name="Update_heading">Update Available</string>
    <string name="update2">An updated version of the app is now available.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="Media">Play</string>
    <string name="doyou">Do you realy want to exit ?</string>
    <string name="please">Please select option</string>
    <string name="ok">OK</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="iagree">I agree to term and conditions</string>
    <string name="plsrd">Please Read Disclaimer</string>
    <string name="viewpastinvitestr">View past invites</string>
    <string name="Invite">Invite</string>
    <string name="sharejoy">Share the joy of learning. Invite your friends</string>
    <string name="otp_textnew">Please Enter 4 digit OTP code sent on your mobile number</string>
    <string name="Verifyotp">Verify OTP</string>
    <string name="alearn">A learning experience delivery platform</string>
    <string name="optional">Optional</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="updatestatus">Your Topic has been Mark Complete successfully.</string>
    <string name="updatestatusnot">Your Topic has not been Mark Complete!.</string>
    <string name="distring" translatable="false">Disclaimer\n
IndiaAI (IndiaAI  we  or us) knows that you care how information about you is used and shared. This Privacy Policy explains what information of yours will be collected by IndiaAI when you use www.India-ai.in (the site) and related services (the Service)  how the information will be used, and how you can control the collection, correction and/or deletion of information. We will not use or share your information with anyone except as described in this Privacy Policy.
Personal data and use
We take your privacy extremely seriously and use your personal data only for legitimate reasons and in accordance with data protection law, and any other applicable legislation, for purposes such as: providing and improving the Site, allowing you to participate in various projects implemented by us through the Site, responding to queries addressed by you through the Site, research, maintenance of accounts and records and the promotion of services.
Processing personal data of end users
While using our Site, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally, identifiable information may include, but is not limited to, your name, email address, postal address and phone number.
We process your personal data for the purposes described in this Privacy Policy, based on the following legal grounds:
•	with your consent: we may ask for your agreement to process your personal data for specific purposes and you have the right to withdraw your consent at any time; or
•	IndiaAI s legitimate interests while applying appropriate safeguards that protect your privacy. This means that we may process your personal data for things like:
•	providing, maintaining, and improving our Site; or
•	detecting preventing, or otherwise addressing fraud, abuse, security, or technical issues with our Site.

Cookies
Cookies are alphanumeric identifiers that we transfer to your computer s hard drive through your Web browser. These cookies enable us to understand how you use the Site and enhance your experience whilst on it. They help us to provide you with a better Site, by enabling us to monitor which pages you find useful, and those you do not. Please be assured that cookies in no way give us access to your computer or any information about you, other than the data you choose to share with us. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Site.
By continuing to use our Site without changing your browser settings you consent to the use of cookies as described in this Privacy Policy.
You may, at times, encounter cookies or other similar data collection devices on certain pages of the website that belong to and are placed by third parties. We do not control the use of such cookies of third parties.
Links to other sites
Our Site may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party s site. Third parties may display advertisements on their sites. These advertisements may contain cookies, web beacons and other similar technologies. These third parties may collect information or insert cookies or similar technologies without our knowledge. We strongly advise you to review the privacy policy and terms and conditions of every site you visit. We have no control over, assume no responsibility for, and do not endorse, the content, privacy policies, or practices of any third party sites or services.
Data Retention
Data is retained on our file in accordance with legal requirements, the professional status of the data subject, and the data subject s choice and preference.
Changes to this Privacy Policy
We may update this Privacy Policy from time to time. We will inform you of any changes by posting the new Privacy Policy on the Site without other notice to you. You are advised to review this Privacy Policy periodically for any changes.

</string>
    <string name="referfriend">Refer a Friend</string>
    <string name="user">User</string>
</resources>