<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/update_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimValue_25"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Update_heading"
            android:textAlignment="center"
            android:textColor="#4a4d4e"
            android:textSize="@dimen/dimTextSize_20" />

        <TextView
            android:id="@+id/textMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update2"
            android:textAlignment="center"
            android:textColor="#4a4d4e"
            android:layout_marginTop="@dimen/dimValue_10"
            android:textSize="@dimen/dimTextSize_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_heading_layout"
        android:padding="@dimen/dimValue_20"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/size_120px"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/done_corner_round"
            android:text="@string/remind_me_later"
            android:textAlignment="center"
            android:textColor="#fff" />
        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="@dimen/size_120px"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimValue_5"
            android:layout_weight="0.5"
            android:background="@drawable/done_corner_round"
            android:text="@string/update_text"
            android:textAlignment="center"
            android:textColor="#fff" />


    </LinearLayout>
</RelativeLayout>