<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    tools:context="dlp.bluelupin.dlp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#e60000"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/logoLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimValue_5"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/leftArrow"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="arr"
                            android:textColor="#fff"
                            android:textSize="@dimen/dimTextSize_30" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimValue_10"
                        android:gravity="left|center"
                        android:text="@string/account_settings"
                        android:textColor="#fff"
                        android:textSize="@dimen/dimTextSize_22" />
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimValue_16"
                android:layout_marginTop="@dimen/dimValue_20"
                android:layout_marginRight="@dimen/dimValue_16"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/nameLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <EditText
                        android:id="@+id/enterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_name"
                        android:maxLength="40"
                        android:singleLine="true"
                        android:textColor="#4a4d4e"
                        android:textCursorDrawable="@drawable/edit_cursor"
                        android:textSize="@dimen/dimTextSize_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimValue_5"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/emailLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <EditText
                        android:id="@+id/enterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_email"
                        android:maxLength="35"
                        android:singleLine="true"
                        android:textColor="#4a4d4e"
                        android:textCursorDrawable="@drawable/edit_cursor"
                        android:textSize="@dimen/dimTextSize_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimValue_5"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/phoneLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <EditText
                        android:id="@+id/enterPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_phone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="#4a4d4e"
                        android:textCursorDrawable="@drawable/edit_cursor"
                        android:textSize="@dimen/dimTextSize_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimValue_5"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lanLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_language"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:id="@+id/spinnerLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_25"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/autoPlay"
                        android:layout_width="@dimen/size_20px"
                        android:layout_height="@dimen/size_20px" />

                    <TextView
                        android:id="@+id/autoPlayCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimValue_10"
                        android:text="@string/autoplay_videos"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_25"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genderLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <RadioGroup
                            android:id="@+id/radioGrp"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioM"
                                style="@style/radionbutton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_weight="0.4"
                                android:checked="true"
                                android:padding="@dimen/dimValue_10"
                                android:text="@string/male"
                                android:textColor="#4a4d4e"
                                android:textSize="@dimen/dimTextSize_18" />

                            <RadioButton
                                android:id="@+id/radioF"
                                style="@style/radionbutton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="0.6"
                                android:checked="false"
                                android:padding="@dimen/dimValue_10"
                                android:text="@string/female"
                                android:textColor="#4a4d4e"
                                android:textSize="@dimen/dimTextSize_18" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/disclaimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/disclaimerimgcheck"
                            android:layout_width="@dimen/dimTextSize_18"
                            android:src="@drawable/checkbox"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/dimValue_20"/>


                        <TextView
                            android:id="@+id/dec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimValue_10"
                            android:layout_marginRight="@dimen/dimValue_10"
                            android:text="@string/disclaimer"
                            android:padding="@dimen/dimValue_5"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/dimTextSize_16" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_20"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <!--
                                                <TextView
                                                    android:id="@+id/cancel"
                                                    android:layout_width="0dp"
                                                    android:layout_height="wrap_content"
                                                    android:layout_marginLeft="@dimen/dimValue_10"
                                                    android:layout_marginRight="@dimen/dimValue_10"
                                                    android:layout_weight="0.5"
                                                    android:background="@drawable/cancel_corner_round"
                                                    android:gravity="center"
                                                    android:padding="@dimen/dimValue_13"
                                                    android:text="@string/cancel"
                                                    android:textColor="#fff"
                                                    android:textSize="@dimen/dimTextSize_20" />-->

                        <TextView
                            android:id="@+id/save"
                            android:layout_width="@dimen/size_150px"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimValue_10"
                            android:layout_marginRight="@dimen/dimValue_10"
                            android:background="@drawable/done_corner_round"
                            android:gravity="center"
                            android:padding="@dimen/dimValue_13"
                            android:text="@string/save"
                            android:textColor="#fff"
                            android:textSize="@dimen/dimTextSize_20" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimValue_40"
                    android:background="#00000000" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
