<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fillViewport="true"
    tools:context="dlp.bluelupin.dlp.Fragments.CourseFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimValue_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/course_layout_corner_round"
            android:orientation="vertical"
            android:padding="@dimen/dimValue_13">

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200px"
                android:scaleType="fitXY"
                android:src="@drawable/education" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimValue_10"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="@dimen/dimTextSize_20" />

            <TextView
                android:id="@+id/sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimValue_10"
                android:paddingBottom="@dimen/dimValue_10"
                android:text="@string/course_description"
                android:textColor="#fff"
                android:textSize="@dimen/dimTextSize_18" />
        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimValue_10"
            android:text="Lorem lpsum is simply dummy text of the printing and typesetting industry."
            android:textColor="#000"
            android:textSize="@dimen/dimTextSize_18"
            android:visibility="gone" />

        <TextView
            android:id="@+id/programTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimValue_10"
            android:text="@string/our_programs"
            android:textColor="#000"
            android:textSize="@dimen/dimTextSize_20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dimValue_10"
            android:background="#929495" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimValue_10"
            android:background="#00000000"
            android:paddingBottom="@dimen/dimValue_30"
            android:scrollbars="none" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
